unpackaged/main/default/objects/Opportunity/fields/Allocated_Funds__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Funds__c</fullName>
    <inlineHelpText>Concatenated list of funds. Used to summarize first fund to the account.</inlineHelpText>
    <label>Allocated Funds</label>
    <type>TextArea</type>
</CustomField>