unpackaged/main/default/objects/Opportunity/fields/Emergency_Donation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Donation__c</fullName>
    <formula>OR( Emergency_Funds_Count__c &gt; 0,
CONTAINS (Allocated_Funds__c,&quot;Typhoon Haiyan&quot;),CONTAINS (Allocated_Funds__c,&quot;Emergency Rohingya Fund&quot;),CONTAINS (Allocated_Funds__c,&quot;Colombia EQ 1999&quot;),CONTAINS (Allocated_Funds__c,&quot;El Salvador EQ 2001&quot;),CONTAINS (Allocated_Funds__c,&quot;Midwest Flood 1993&quot;),CONTAINS (Allocated_Funds__c,&quot;Taiwan EQ 1999&quot;),CONTAINS (Allocated_Funds__c,&quot;Tsunami Relief 2004&quot;),CONTAINS (Allocated_Funds__c,&quot;Venezuela Flood 1999&quot;),CONTAINS (Allocated_Funds__c,&quot;WTC Tragedy 2001&quot;),CONTAINS (Allocated_Funds__c,&quot;Pakistan Flood Relief 2010&quot;),CONTAINS (Allocated_Funds__c,&quot;Rwanda Genocide 1994&quot;),CONTAINS (Allocated_Funds__c,&quot;SE Asia EQ 2005&quot;),CONTAINS (Allocated_Funds__c,&quot;Ebola Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Emergency&quot;),CONTAINS (Allocated_Funds__c,&quot;Urgent LGBT Uganda Fund&quot;),CONTAINS (Allocated_Funds__c,&quot;Somali War 1992-95&quot;),CONTAINS (Allocated_Funds__c,&quot;Rapid Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;CentAmer Hurr 1998&quot;),CONTAINS (Allocated_Funds__c,&quot;Nepal Earthquake Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Haiti Hurr 2012&quot;),CONTAINS (Allocated_Funds__c,&quot;California EQ 1994&quot;),CONTAINS (Allocated_Funds__c,&quot;Mexico Hurricane Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Cyclone Fani Response Fund&quot;),CONTAINS (Allocated_Funds__c,&quot;Mexico Earthquake Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Japan EQ 1995&quot;),CONTAINS (Allocated_Funds__c,&quot;Sudan Famine 1998&quot;),CONTAINS (Allocated_Funds__c,&quot;CentAmer Trop 2010&quot;),CONTAINS (Allocated_Funds__c,&quot;Bangladesh Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Central America Floods&quot;),CONTAINS (Allocated_Funds__c,&quot;Lambi/Haiti-Emerge&quot;),CONTAINS (Allocated_Funds__c,&quot;Iraq War Relief 2003&quot;),CONTAINS (Allocated_Funds__c,&quot;Kurdish Crisis 1991&quot;),CONTAINS (Allocated_Funds__c,&quot;Turkish Earthquake&quot;),CONTAINS (Allocated_Funds__c,&quot;Congo Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Indonesia Disaster Response Fund&quot;),CONTAINS (Allocated_Funds__c,&quot;Mexico EQ 1985&quot;),CONTAINS (Allocated_Funds__c,&quot;Mozamb Flood 2000&quot;),CONTAINS (Allocated_Funds__c,&quot;East African Drought Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Haiti Earthquake Reli&quot;),CONTAINS (Allocated_Funds__c,&quot;Indonesia Earthquake Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Java Earthquake&quot;),CONTAINS (Allocated_Funds__c,&quot;Niger Famine&quot;),CONTAINS (Allocated_Funds__c,&quot;India EQ 1993&quot;),CONTAINS (Allocated_Funds__c,&quot;India EQ 2001&quot;),CONTAINS (Allocated_Funds__c,&quot;General Humanitarian Response&quot;),CONTAINS (Allocated_Funds__c,&quot;East Africa Crises Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Haiti/DR Hurr 2008&quot;),CONTAINS (Allocated_Funds__c,&quot;Kosovo War 1999&quot;),CONTAINS (Allocated_Funds__c,&quot;Burma Cyclone Relief&quot;),CONTAINS (Allocated_Funds__c,&quot;Hurricane Matthew Relief&quot;), CONTAINS (Allocated_Funds__c,&quot;Cyclone Amphan Response Fund&quot;), CONTAINS (Allocated_Funds__c,&quot;Hurricanes Eta&quot;), CONTAINS (Allocated_Funds__c,&quot;Hurricane Eta&quot;), CONTAINS (Allocated_Funds__c,&quot;Cyclone Mocha&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emergency Donation</label>
    <type>Checkbox</type>
</CustomField>