unpackaged/main/default/objects/Opportunity/fields/Emergency_Funds_Count__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Funds_Count__c</fullName>
    <description>Used in the &quot;Emergency Donation&quot; formula field that identifies donations to emergency funds. Count of child GAU Allocations related to this donation that are associated with an Emergency Fund. Rolled-up nightly by DLRS action: &quot;Emergency Donations Rollup&quot;</description>
    <label>Emergency Funds Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>